# mse_cyclone-energetics

./: .gitignore  LICENSE  README.md  pyproject.toml  run_nh_composites.py  run_notebook.sbatch  run_te_one_year.py  verify_numerical.py
cyclone_energetics/: cli.py  composites.py  condensed_composites.py  constants.py  era5.py  flux_assignment.py  flux_computation.py  geometry.py  gridded_data.py  integration.py  masking.py  smoothing.py  storage_computation.py  track_processing.py  variability.py  zonal_advection.py
cyclone_energetics/assignment/: flux_assignment.py
cyclone_energetics/composites/: builder.py  condensed.py  land_fraction.py
cyclone_energetics/computation/: advection.py  flux.py  storage.py
cyclone_energetics/integration/: poleward.py
cyclone_energetics/masking/: masks.py
cyclone_energetics/smoothing/: hoskins.py
cyclone_energetics/tracks/: processing.py
cyclone_energetics/variability/: interannual.py
ncl/: hoskins_filter.ncl
notebooks/: final_figures.ipynb  plot_fig7_composites.py  run_figures_execute_only.py  run_final_figures.sbatch
scripts/: compute_yearly_variability.py  merge_pragallva_figures.py
slurm/: assign_fluxes.sbatch  build_composites.sbatch  compute_te.sbatch  create_masks.sbatch  integrate_fluxes.sbatch  process_tracks.sbatch  run_tests.sbatch  smooth.sbatch
src/cyclone_energetics/: cli.py  composites.py  composites_wm.py  condensed_composites.py  constants.py  flux_assignment.py  flux_computation.py  geometry.py  integration.py  (+5 more)
tests/: test_validate.py  validate_against_reference.py  validate_numerics.py
